fixed high contrast glitch, made it compatible with safari

--- a/client/src/components/pages/Play.css
+++ b/client/src/components/pages/Play.css
@@ -45,7 +45,8 @@
     align-items: flex-end;
     min-height: 170px;
     height: 45*3+15;
-    width: 90%;
+    width: 95%;
+    max-width: 500px;
     justify-content: center;
 }
 
